docs/content/docs/v2/index.mdx
---
title: Introduction
description: Feature-based architecture for Roblox.
---

import { Cards, Card } from "fumadocs-ui/components/card";
import { Callout } from "fumadocs-ui/components/callout";
import { BookOpen, Rocket, Settings2 } from "lucide-react";

A bad folder structure slows development. Remembering where the related pieces are increases cognitive load. And finding files wastes time.

## The Problem: Layer-Based Architecture

Typical Roblox projects structure their codebases in two ways:

1. **By Environment:** Split code at the root into `server`, `client`, and `shared` folders.
2. **By Type:** Inside the roots, group files by technical role (like `Controllers`, `Services`, or `Utils`).

The layout may be clean at the beginning but it gets messy in large codebases. Folders grow rapidly. Related files live far apart. Navigating the project becomes slow.
Updating an **Inventory** system forces developers to search through massive file trees just to gather the related pieces.

<PreviewGroup>
	<SystemWindow>
		<TreeFolder name="src" open />
		<TreeFolder name="client" level={1} open />
		<TreeFolder name="Controllers" level={2} open />
		<TreeFile name="InventoryController.luau" level={3} highlight />

    	<TreeFolder name="server" level={1} open mt />
    	<TreeFolder name="Services" level={2} open />
    	<TreeFile name="InventoryService.luau" level={3} highlight />

    	<TreeFolder name="shared" level={1} open mt />
    	<TreeFolder name="Types" level={2} open />
    	<TreeFile name="InventoryTypes.luau" level={3} highlight />
    </SystemWindow>

</PreviewGroup>

<Callout type="warn">
	**The Friction:** Context switching. Working on one feature requires
	navigating through unrelated systems just to find the right server script.
</Callout>

## The Solution: Feature-Based Architecture

Keep all code for a specific feature (client, server, and shared code) inside a single, self-contained **feature folder**.

Rogen reads the folder layout and the file names, and generates a Rojo **project file** that places every script in the Roblox **service** where it needs to run.
Rogen doesn't sync anything itself: Rojo or Argon reads the generated project file and syncs the files into Roblox Studio.

<PreviewGroup>
	<SystemWindow>
		<TreeFolder name="src" open />
		<TreeFolder name="Inventory" level={1} open highlight />
		<TreeFolder name="Client" level={2} dim />
		<TreeFile name="InventoryController.luau" level={3} />
		<TreeFolder name="Server" level={2} dim />
		<TreeFile name="InventoryService.luau" level={3} />
		<TreeFolder name="Shared" level={2} dim />
		<TreeFile name="InventoryTypes.luau" level={3} />
	</SystemWindow>

    <PreviewArrow />

    <StudioWindow>
    	<TreeService name="ReplicatedStorage" type="replicated" />
    	<TreeFolder name="Shared" level={1} />
    	<TreeFolder name="Inventory" level={2} highlight />
    	<StudioFile name="InventoryTypes" level={3} />

    	<TreeService name="ServerScriptService" type="server" mt />
    	<TreeFolder name="Inventory" level={1} highlight />
    	<StudioFile name="InventoryService" level={2} />

    	<TreeService name="StarterPlayerScripts" type="player" mt />
    	<TreeFolder name="Inventory" level={1} highlight />
    	<StudioFile name="InventoryController" level={2} />
    </StudioWindow>

</PreviewGroup>

The **routes** in the [config](/docs/v2/configuration) say where each kind of code goes:

```json title="default.rogen.json"
{
	"routes": {
		"Server": "ServerScriptService",
		"Client": "StarterPlayer/StarterPlayerScripts",
		"Shared": "ReplicatedStorage/Shared",
		"*": "ReplicatedStorage/Shared"
	}
}
```

<Callout type="info">
	**The Result:** Developers maintain a clean repository, while Roblox Studio
	receives the scripts in the right containers.
</Callout>

## Where to Go Next

<Cards>
	<Card
		icon={<Rocket />}
		title="Installation"
		href="/docs/v2/installation"
	>
		Install Rogen and check the version.
	</Card>
	<Card
		icon={<BookOpen />}
		title="Routing"
		href="/docs/v2/core-concepts/routing"
	>
		How folders, marker files and suffixes decide where a file goes.
	</Card>
	<Card
		icon={<Settings2 />}
		title="Configuration"
		href="/docs/v2/configuration"
	>
		Every field of a `.rogen.json` config.
	</Card>
</Cards>
